AM_CFLAGS = -I.
AM_LDFLAGS = -lisal

noinst_PROGRAMS = lanl_netof lanl_ntofe lanl_rebuildne lanl_ftone lanl_rebuild1n_from_e0 lanl_health lanl_singleHealth
lanl_netof_SOURCES = lanl_netof.c
lanl_ntofe_SOURCES = lanl_ntofe.c
lanl_rebuildne_SOURCES = lanl_rebuildne.c
lanl_ftone_SOURCES = lanl_ftone.c
lanl_rebuild1n_from_e0_SOURCES = lanl_rebuild1n_from_e0.c
lanl_health_SOURCES = lanl_health.c
lanl_singleHealth_SOURCES = lanl_singleHealth.c

